# movements

./: .gitignore  Cargo.toml  NOTES.md  README.md  build.sh
.circleci/: config.yml
_gcode-interpreter/: Cargo.toml  NOTES.md
_gcode-parser/benches/: comment.rs  coord.rs  program.rs
_gcode-parser/src/: lib.rs
_gcode-validator/: Cargo.toml
_gcode-validator/src/: lib.rs
_pathviewer/: Cargo.toml
_pathviewer/src/: main.rs
_shunting-yard/: Cargo.toml
_streaming-gcode-parser/: Cargo.toml  build.rs
_streaming-gcode-parser/src/: block.rs  expression.rs  statement.rs
_streaming-gcode-parser/src/modal_groups/: coordinate_system.rs  cutter_compensation.rs  distance_mode.rs  feedrate_mode.rs  stopping.rs
_streaming-gcode-parser/tests/: file_suite.rs  file_suite_template
_trajectory-planner/: Cargo.toml  README.md
_trajectory-planner/src/: linuxcnc_no_blend.rs  traj_1d_trapezoidal.rs  traj_nd_trapezoidal.rs
clean-slate/: Cargo.toml  README.md
clean-slate/benches/: word_const_fn.rs  word_const_fn_spans.rs
clean-slate/src/: block.rs  const_generics_spanned.rs  const_generics_test.rs  lib.rs  parse_modal.rs  parse_modal_spans.rs  program.rs  spanned_word.rs
clean-slate/src/snapshots/: clean_slate__block__tests__newline.snap  clean_slate__parse_modal__tests__snapshot_motion.snap  clean_slate__parse_modal__tests__snapshot_non_modal.snap  clean_slate__parse_modal_spans__tests__snapshot_motion.snap  clean_slate__parse_modal_spans__tests__snapshot_non_modal.snap  clean_slate__program__tests__newline.snap  clean_slate__spanned_word__tests__block_comment.snap  clean_slate__spanned_word__tests__ignore_newlines.snap  clean_slate__spanned_word__tests__inline_comment.snap  clean_slate__spanned_word__tests__position.snap  clean_slate__spanned_word__tests__snapshot_motion.snap  clean_slate__spanned_word__tests__snapshot_non_modal.snap
common/: Cargo.toml  DESIGN.md
common/src/: lib.rs
gcode-interpreter/: Cargo.toml
gcode-interpreter/src/: lib.rs
gcode-parser/: Cargo.toml
gcode-parser-old/benches/: block.rs  word.rs
gcode-parser-old/src/: block.rs  comment.rs  cutter_compensation.rs  macros.rs  motion.rs
gcode-parser/benches/: block.rs  comment.rs  coord.rs  files.rs  plane_select.rs  program.rs  word.rs
gcode-parser/src/: block.rs  comment.rs  coord.rs  cutter_compensation.rs  distance_mode.rs  lib.rs  macros.rs  motion.rs  non_modal.rs  plane_select.rs  spindle.rs  stopping.rs  token.rs  tool_change.rs  units.rs  word.rs
interpreter/: Cargo.toml
interpreter/src/: lib.rs
planner/: Cargo.toml
planner/src/: lib.rs  one_d.rs  one_d_jerk.rs
realtime-test/: Cargo.toml  histo.gnuplot  main.c
realtime-test/.cargo/: config
realtime-test/plots/: NOTES.md
realtime-test/src/: join_handle.rs  lib.rs  main.rs  native_thread.rs
shunting-yard-dead/src/: lib.rs
streaming-gcode-parser/: Cargo.toml
streaming-gcode-parser/src/: block.rs  complete_coord.rs  coord.rs  expression.rs  lib.rs  macros.rs  parameter.rs  statement.rs  value.rs  word.rs
streaming-gcode-parser/src/modal_groups/: coordinate_system.rs  cutter_compensation.rs  distance_mode.rs  feedrate_mode.rs  mod.rs  motion.rs  non_modal.rs  plane_select.rs  spindle.rs  stopping.rs  units.rs
test_files/linuxcnc/ngcgui_lib/: qpocket.ngc
test_files/linuxcnc/ngcgui_lib/lathe/: taper-od.ngc
test_files/tinyg/: ShapeOko_Calibration_Pattern_01b.ngc  alpha_01_full_test_001.gcode  mudflap_100in.gcode  mudflap_10in.gcode  mudflap_16in.gcode  mudflap_25in.gcode  mudflap_50in.gcode  mudflap_5in.txt  openpnp_test.txt  spiro_002.gcode  tinyg_test_001.gcode  xyzcurve.txt  xyzcurve_250mm.txt  xyzcurve_300mm.txt  xyzcurve_400mm.txt  xyzcurve_500mm.txt  xyzcurve_800mm.txt  zoetrope.gcode  zoetrope_001.gcode
test_files/tinyg/_makerfaire/: hammer_001.txt  hammer_002.txt
test_files/tinyg/_untested/: MAGNET_HOLES.txt  MAGNET_HOLES_F400.txt  MAGNET_HOLES_ORIG.txt  Otherlab-378-10-test_001.txt
test_files/universal_gcode_sender/: ShapeOko_Calibration_Pattern_01b.ngc  ruler.gcode
trajectory-planner/: Cargo.toml  index.html
trajectory-planner/src/: common.rs  lib.rs  lib_traj_nd_trapezoidal.rs  linuxcnc_trapezoidal.rs  traj_1d_trapezoidal.rs  traj_nd_trapezoidal.old.rs  traj_nd_trapezoidal.rs
