[workspace]
members = [
    "gcode-parser-old",
    # "gcode-validator",
    "gcode-interpreter",
    "pathviewer",
    "realtime-test",
    "streaming-gcode-parser",
    "trajectory-planner",
    "playground",
]

[patch.crates-io]
gcode-parser = { path = "gcode-parser-old" }
gcode-interpreter = { path = "gcode-interpreter" }
streaming-gcode-parser = { path = "streaming-gcode-parser" }
