[workspace]
members = [
    "realtime-test",
    "playground",
    # "gcode-parser-old",
    # "gcode-validator",
    # "gcode-interpreter",
    # "pathviewer",
    # "streaming-gcode-parser",
    # "trajectory-planner",
    "interpreter",
    "parser",
    "common"
]

# [patch.crates-io]
# gcode-parser = { path = "gcode-parser-old" }
# gcode-interpreter = { path = "gcode-interpreter" }
# streaming-gcode-parser = { path = "streaming-gcode-parser" }

[patch.crates-io]
common = { path = "common" }
interpreter = { path = "interpreter" }
parser = { path = "parser" }
