[workspace]
members = [
    "playground",
    # "gcode-parser-old",
    # "gcode-validator",
    # "gcode-interpreter",
    # "pathviewer",
    # "streaming-gcode-parser",
    # "trajectory-planner",
    "interpreter",
    "parser",
    "common",
    "planner",
    "clean-slate"
]
exclude = [
    # Excluded as it doesn't work on macOS
    "realtime-test",
]

# [patch.crates-io]
# gcode-parser = { path = "gcode-parser-old" }
# gcode-interpreter = { path = "gcode-interpreter" }
# streaming-gcode-parser = { path = "streaming-gcode-parser" }

[patch.crates-io]
common = { path = "common" }
interpreter = { path = "interpreter" }
parser = { path = "parser" }
