[package]
name = "pathviewer"
version = "0.1.0"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiss3d = "0.23.0"
nalgebra = "0.20.0"
gcode-parser = "0.1.0"
gcode-interpreter = "0.1.0"
