[package]
name = "streaming-gcode-parser"
version = "0.1.0"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.1.2"
# Not for the core lib, but the scripty helper binary things use it.
glob = "0.3.0"
nom_locate = "3.0.0"

[build-dependencies]
glob = "0.3.0"
