[package]
name = "gcode-parser"
version = "0.1.0"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "word"
harness = false

[[bench]]
name = "coord"
harness = false

[[bench]]
name = "comment"
harness = false

[dependencies]
nom = "5.1.1"

[dev-dependencies]
criterion = "0.3.1"
