[package]
name = "realtime-test"
version = "0.1.0"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thread-priority = "0.2.0"
histogram = "0.6.9"
crossbeam = "0.7.3"
libc = "0.2.97"
