[package]
name = "realtime-test"
version = "0.1.0"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thread-priority = "0.2.0"
histogram = "0.6.9"
crossbeam = "0.7.3"
libc = "0.2.97"
chrono = "0.4.19"
hostname = "0.3.1"
gpio = "0.4.1"
embedded-graphics = "0.7.1"
embedded-graphics-simulator = "0.3.0"
signal-hook = "0.3.9"
plotters = "0.3.1"
plotters-cairo = "0.3.1"
gtk = "0.9.2"
gio = "0.9.1"
cairo-rs = "0.9.1"
glib = "0.10.3"
